--- a/src/app/restrito/menu-restrito/menu-restrito.component.css
+++ b/src/app/restrito/menu-restrito/menu-restrito.component.css
@@ -1,17 +1,17 @@
 .example-spacer {
     flex: 1 1 auto;
-  }
-
-span{
-    padding: 10px;
 }
 
-  img{
-    height: 50px;
-    width: 50px;  
-  }
+span {
+    padding: 5px 5px;
+}
 
-  a{
+a {
     text-decoration: none;
     color: white;
-  }
+}
+
+img {
+    height: 50px;
+    width: 50px;
+}
